<resources>
    <string name="app_name">Masaryk</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="desc">-</string>

    <string name="txt_cancel">Cancelar</string>
    <string name="txt_error">Error</string>
    <string name="txt_thanks">Gracias</string>
    <string name="txt_register">REGISTRO</string>
    <string name="txt_recover">RECUPERAR CONTRASEÑA</string>
    <string name="txt_hint_email">CORREO</string>
    <string name="txt_hint_password">CONTRASEÑA</string>
    <string name="txt_hint_confirm">CONFIRMAR CONTRASEÑA</string>
    <string name="txt_hint_name">NOMBRE</string>
    <string name="txt_hint_surename">APELLIDOS</string>
    <string name="txt_hint_city">CIUDAD</string>
    <string name="txt_hint_birthday">FECHA DE NACIMIENTO</string>
    <string name="txt_hint_phone">TELÉFONO</string>
    <string name="txt_hint_filter">Filtrar</string>
    <string name="txt_activity_title">Carrera 25km Masaryk</string>
    <string name="txt_activity_description">Únete a la carrera 25km Masaryk y compite contra tus amigos</string>
    <string name="txt_activity_address">Presidente Masaryk 332</string>
    <string name="txt_activity_date">Miér. - 28 de Sept.</string>
    <string name="txt_activity_time">17:15 am - 18:11 am</string>
    <string name="txt_activity_phone">55.59.80.8807</string>
    <string name="txt_select_option">Selecciona una opción</string>
    <string name="txt_phone">Teléfono</string>
    <string name="txt_activity_pay">Esta actividad tiene costo. Si ya hiciste el pago ¿te gustaría agendarlo? En caso contrario también puedes pasar a la pasarela de pago.</string>
    <string name="txt_activity_free">¿Quieres agregar este evento a tu calendario?</string>
    <string name="txt_activity_remove">¿Quieres eliminar el evento de tu agenda?</string>

    <string name="error_email">El correo no tiene un formato correcto</string>
    <string name="error_password">La contraseña debe tener al menos 6 caracteres.</string>
    <string name="error_connectivity">No se encontró señal de internet.</string>

    <string name="txt_gps_alert">¡Tu GPS está deshabilitado! ¿Te gustaría activarlo?</string>
    <string name="txt_gps_continue">Continuar sin GPS</string>
    <string name="txt_gps_activate">Habilitar GPS</string>

    <string name="bt_tab_bottom_1">Promociones</string>
    <string name="bt_tab_bottom_2">Locales</string>
    <string name="bt_tab_bottom_3">Actividades</string>
    <string name="bt_tab_bottom_4">Perfil</string>

    <string name="bt_close">Cerrar</string>
    <string name="bt_schedule">Agendar</string>
    <string name="bt_payment">Pagar</string>
    <string name="bt_send">ENVIAR</string>
    <string name="bt_recover">RECUPERAR</string>
    <string name="bt_register">REGISTRARME</string>
    <string name="bt_facebook">FACEBOOK</string>
    <string name="bt_select_camera">Desde la cámara</string>
    <string name="bt_select_photo">Desde la galería</string>

    <string name="facebook_app_id">1044543635607693</string>
    <string name="google_app_id">1071278916452</string>
    <string name="gcm_sender_id">1071278916452</string>

</resources>
