<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/fl_tabs"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/tab_menu"/>

    <LinearLayout
        android:id="@+id/tab_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_tab_bottom_1"
            style="@style/bt_tab_bottom"
            android:drawableTop="@drawable/bt_menu_bottom_1_off"
            android:tag="0"
            android:onClick="clickTab"
            android:text="@string/bt_tab_bottom_1"/>

        <Button
            android:id="@+id/bt_tab_bottom_2"
            style="@style/bt_tab_bottom"
            android:drawableTop="@drawable/bt_menu_bottom_2_off"
            android:tag="1"
            android:onClick="clickTab"
            android:text="@string/bt_tab_bottom_2"/>

        <Button
            android:id="@+id/bt_tab_bottom_3"
            style="@style/bt_tab_bottom"
            android:drawableTop="@drawable/bt_menu_bottom_3_off"
            android:tag="2"
            android:onClick="clickTab"
            android:text="@string/bt_tab_bottom_3"/>

        <Button
            android:id="@+id/bt_tab_bottom_4"
            style="@style/bt_tab_bottom"
            android:drawableTop="@drawable/bt_menu_bottom_4_off"
            android:tag="3"
            android:onClick="clickTab"
            android:text="@string/bt_tab_bottom_4"/>

    </LinearLayout>

</RelativeLayout>