<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#edeef0">

    <include
        android:id="@+id/header"
        layout="@layout/header" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingBottom="40dp"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:background="#e5c6cf">

                <Button
                    android:id="@+id/bt_avatar"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_toLeftOf="@+id/ll_profile"
                    android:layout_toStartOf="@+id/ll_profile"
                    android:layout_marginRight="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/bt_circle"/>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_avatar"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_centerVertical="true"
                    app:civ_border_width="2dp"
                    app:civ_border_color="#FFFFFF"
                    android:layout_toLeftOf="@+id/ll_profile"
                    android:layout_toStartOf="@+id/ll_profile"
                    android:layout_marginRight="20dp"
                    android:layout_marginEnd="20dp"/>

                <LinearLayout
                    android:id="@+id/ll_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_info_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="#cd506c" />

                    <TextView
                        android:id="@+id/txt_info_city"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:drawableLeft="@drawable/icon_pin_profile"
                        android:drawableStart="@drawable/icon_pin_profile"
                        android:drawablePadding="5dp"
                        android:textSize="14sp"
                        android:textColor="#cd506c" />

                </LinearLayout>

                <ImageButton
                    android:id="@+id/bt_close"
                    style="@style/bt_image"
                    android:src="@drawable/bt_close"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dp"
                    android:alpha="0.6"/>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/ll_profile_fields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/rl_profile"
                android:paddingTop="40dp"
                android:paddingLeft="50dp"
                android:paddingRight="50dp">

                <EditText
                    android:id="@+id/txt_email"
                    style="@style/txt_form"
                    android:hint="@string/txt_hint_email"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/txt_password"
                    style="@style/txt_form"
                    android:hint="@string/txt_hint_password"
                    android:inputType="textPassword" />

                <EditText
                    android:id="@+id/txt_confirm"
                    style="@style/txt_form"
                    android:hint="@string/txt_hint_confirm"
                    android:inputType="textPassword" />

                <EditText
                    android:id="@+id/txt_first_name"
                    style="@style/txt_form"
                    android:hint="@string/txt_hint_name" />

                <EditText
                    android:id="@+id/txt_last_name"
                    style="@style/txt_form"
                    android:hint="@string/txt_hint_surename" />

                <EditText
                    android:id="@+id/txt_city"
                    style="@style/txt_form"
                    android:hint="@string/txt_hint_city" />

                <Button
                    android:id="@+id/bt_birthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/bt_birthday"
                    android:gravity="start|center_vertical"
                    android:onClick="clickBirthday"
                    android:text="@string/txt_hint_birthday"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/txt_phone"
                    style="@style/txt_form"
                    android:hint="@string/txt_hint_phone"
                    android:inputType="phone" />

                <Button
                    android:id="@+id/bt_send"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/bt_white"
                    android:text="@string/bt_send" />

            </LinearLayout>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="-15dp"
                android:contentDescription="@string/desc"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/rl_profile"
                android:src="@drawable/icon_profile"/>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>