<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <ImageView
            android:id="@+id/img_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/desc"
            android:src="@drawable/icon_activity_pay" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_toEndOf="@+id/img_type"
            android:layout_toLeftOf="@+id/ll_activity_schedule"
            android:layout_toRightOf="@+id/img_type"
            android:layout_toStartOf="@+id/ll_activity_schedule"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/txt_activity_title"
                android:textSize="13sp"
                android:maxLines="1"
                android:ellipsize="end"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_activity_description"
                android:ellipsize="end"
                android:maxLines="2"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_activity_schedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/img_arrow"
            android:layout_toStartOf="@+id/img_arrow"
            android:orientation="vertical">

            <Button
                android:id="@+id/bt_schedule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:background="@null"
                android:focusable="false"
                android:text="@string/bt_schedule" />

            <TextView
                android:id="@+id/txt_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:drawableLeft="@drawable/icon_cal"
                android:drawablePadding="3dp"
                android:drawableStart="@drawable/icon_cal"
                android:text="@string/txt_activity_date"
                android:textColor="#cd506c"
                android:textSize="10sp" />
å
            <TextView
                android:id="@+id/txt_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/icon_loc"
                android:drawableStart="@drawable/icon_loc"
                android:text="@string/txt_activity_time"
                android:textColor="#cd506c"
                android:textSize="10sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/img_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/desc"
            android:src="@drawable/bt_arrow_next"/>

    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/desc"
        android:src="@drawable/separator_activities"/>

</LinearLayout>