<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#edeef0">

    <include
        android:id="@+id/header"
        layout="@layout/header_back" />

    <LinearLayout
        android:id="@+id/rl_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_gallery"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="#CCCCCC"
            android:scaleType="centerCrop"
            android:contentDescription="@string/desc" />

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/txt_activity_title"
            android:textColor="#cd506c"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/txt_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:layout_marginRight="5dp"
                android:textColor="#333333"
                android:text="@string/txt_activity_description"
                android:textSize="12sp" />


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:layout_marginLeft="5dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:contentDescription="@string/desc"
                        android:src="@drawable/icon_pin"/>

                    <TextView
                        android:id="@+id/txt_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#333333"
                        android:text="@string/txt_activity_address"
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txt_phone_lb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_phone"
                        android:textColor="#cd506c"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/txt_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_activity_phone"
                        android:layout_marginLeft="10dp"
                        android:drawableLeft="@drawable/icon_phone_sm"
                        android:drawableStart="@drawable/icon_phone_sm"
                        android:drawablePadding="5dp"
                        android:textColor="#333333"
                        android:textSize="12sp" />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <ImageButton
                style="@style/bt_actions"
                android:onClick="clickPhone"
                android:contentDescription="@string/desc"
                android:background="@drawable/bt_pink_left"
                android:src="@drawable/icon_tel"/>

            <ImageButton
                style="@style/bt_actions"
                android:onClick="clickWaze"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:contentDescription="@string/desc"
                android:background="#cd506c"
                android:src="@drawable/icon_waze"/>

            <ImageButton
                style="@style/bt_actions"
                android:onClick="clickMaps"
                android:contentDescription="@string/desc"
                android:background="@drawable/bt_pink_right"
                android:src="@drawable/icon_map" />

        </LinearLayout>

    </LinearLayout>


    <fragment
        android:id="@+id/map_view"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rl_container" />

</RelativeLayout>